feat: implementa funções para processar relatórios

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -2,55 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "484214a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# projeto_transacoes_bancarias -- DS-PY-17 - logica de programacao II\n",
-    "# readme link here: \n",
-    "# https://github.com/allansuzuki/ADA_classes/blob/main/DS-PY-Data-Science/DS-PY-017%20L%C3%93GICA%20DE%20PROGRAMA%C3%87%C3%83O%20II%20(PY)/Material%20do%20Aluno/projeto_README.md\n",
-    "# \n",
-    "# Esse programa é um sistema de gestao de transacoes de uma conta bancária pessoal\n",
-    "# no qual os dados são de transações e possuem seu valor, a categoria do gasto e seu ID.\n",
-    "# \n",
-    "# Teu objetivo é completar esse sistema CRUD (Create-Read-Update-Delete) simples \n",
-    "# para ver dados de transacao da tua conta pessoal, criar, editar e excluir transações.\n",
-    "# Também deve fazer com que o programa NUNCA pare, ou seja,\n",
-    "# caso ocorra um possível erro, deve validar as entradas, detectar erros e avisar o usuário\n",
-    "# mas o programa não deve parar.\n",
-    "#\n",
-    "#\n",
-    "# Notas importantes: \n",
-    "# 1. As funções que geram os dados e criam a interface do sistema já estão prontas. \n",
-    "# por favor não as altere.\n",
-    "#\n",
-    "# 2. Depois das funções do sistema estão as funções do programa\n",
-    "# No qual podem alterar à vontade, exceto o nome das funções\n",
-    "# Ou seja, podem criar funções, adicionar ou remover parâmetros, \n",
-    "# mas não alterar o nome das funções existentes.\n",
-    "#\n",
-    "# 3. Coloque opções de navegabilidade em cada janela que o usuário estiver.\n",
-    "# Por exemplo, se ele escolher a opcao \"alterar transacao\" sem querer, tem que ter a opcao de voltar para a tela anterior ou inicial.\n",
-    "#\n",
-    "# 4. Caso por qualquer motivo queira os dados originais novamente,\n",
-    "# apage o json `transactions` na pasta `data` e inicie o programa novamente para gerar os dados.\n",
-    "# Os valores serão os mesmos, porém os UUID NÃO serão os mesmos!!\n",
-    "#\n",
-    "# Critérios (pontos):\n",
-    "#   tarefas validacoes  total\n",
-    "# C     10      15       25\n",
-    "# R     25      25       50\n",
-    "# U     10      10       20\n",
-    "# D     2.5     2.5      5\n",
-    "#\n",
-    "#\n",
-    "# Boa sorte e divirtam-se :)\n",
-    "# ------------------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 82,
    "id": "e582d7ab",
    "metadata": {},
@@ -76,7 +27,6 @@
     "# -----------------------\n",
     "# SYSTEM functions \n",
     "# -----------------------\n",
-    "# não alterar nada das funções de system\n",
     "def criar_transacoes(num_transacoes, proporcao_categorias, seed=settings.seed):\n",
     "    assert sum([proporcao_categorias[k] for k in proporcao_categorias])==1, '`proporcao_categorias` não soma 100%! Favor rever.'\n",
     "\n",
@@ -350,6 +300,45 @@
     "    print(f\"Relatório salvo em {diretorio}/{nome_relatorio}\")\n",
     "\n",
     "\n",
+    "def processar_relatorio(operacao , diretorio):\n",
+    "    categoria = validar_opcao_sim_nao(f\"Deseja calcular {operacao.replace(\"e\", \"é\") if operacao == \"media\" else operacao} por categoria também?\")\n",
+    "    if operacao == \"total\":\n",
+    "        total_transacoes, por_categorias = calcular_total_transacoes(bd, categoria)\n",
+    "        relatorio = f\"O total das transações é R$ {total_transacoes:.2f}\"\n",
+    "    elif operacao == \"media\":\n",
+    "        media_transacoes, por_categorias = calcular_media(bd, categoria)\n",
+    "        relatorio = f\"A média das transações é R$ {media_transacoes:.2f}\"\n",
+    "    print(relatorio)\n",
+    "    salvar_relatorio(relatorio, f\"{operacao}_transacoes.txt\", diretorio)\n",
+    "    if por_categorias is not None:\n",
+    "        relatorio_categorias = []\n",
+    "        for categoria in por_categorias:\n",
+    "            relatorio_categoria = f\"{operacao.capitalize().replace(\"e\", \"é\") if operacao == \"media\" else operacao.capitalize()} da categoria '{categoria}': R$ {por_categorias.get(categoria):.2f}\"\n",
+    "            relatorio_categorias.append(relatorio_categoria)\n",
+    "            print(relatorio_categoria) \n",
+    "        salvar_relatorio(relatorio_categorias, f\"{operacao}_por_categoria.txt\", diretorio)\n",
+    "\n",
+    "\n",
+    "def processar_relatorio_m5(operacao, diretorio):\n",
+    "    categoria = validar_opcao_sim_nao(f\"Deseja calcular top 5 {operacao} por categoria também?\")\n",
+    "    m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
+    "    relatorio = f\"As top 5 {operacao} são:\\n\"\n",
+    "    for indice, transacao in enumerate(m5_transacoes):\n",
+    "        relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
+    "    print(relatorio)\n",
+    "    salvar_relatorio(relatorio, f\"top5_{operacao}.txt\", diretorio)\n",
+    "    if m5_por_categoria is not None:\n",
+    "        relatorio_categorias = []\n",
+    "        for categoria in m5_por_categoria:\n",
+    "            relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
+    "            for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
+    "                relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
+    "            relatorio_categorias.append(relatorio_categoria)\n",
+    "            print(relatorio_categoria)\n",
+    "            print()\n",
+    "        salvar_relatorio(relatorio_categorias, f\"top5_{operacao}_por_categoria.txt\", diretorio)\n",
+    "\n",
+    "\n",
     "def visualizar_relatorios():\n",
     "    print(\"\\nEste menu permite visualizar os relatórios de sua conta pessoal.\")\n",
     "    print(\"\\nEscolha uma das opções abaixo:\")\n",
@@ -369,104 +358,27 @@
     "            break\n",
     "        elif opcao_escolhida == \"1\":\n",
     "            print(\"*** TOTAL DAS TRANSAÇÕES ***\")\n",
-    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o total por categoria também?\")\n",
-    "            total, total_categorias = calcular_total_transacoes(bd, categoria)\n",
-    "            relatorio = f\"O total das transações é R$ {total:.2f}\"\n",
-    "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"total_transacoes.txt\", \"./reports\")\n",
-    "            if total_categorias is not None:\n",
-    "                relatorio_categorias = []\n",
-    "                for categoria in total_categorias:\n",
-    "                    relatorio_categoria = f\"O total da categoria '{categoria}' é R$ {total_categorias.get(categoria):.2f}\"\n",
-    "                    relatorio_categorias.append(relatorio_categoria)\n",
-    "                    print(relatorio_categoria) \n",
-    "                salvar_relatorio(relatorio_categorias, \"total_por_categoria.txt\", \"./reports\")\n",
+    "            processar_relatorio(\"total\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** TOP 5 MAIORES TRANSAÇÕES ***\")\n",
-    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            operacao = \"maiores\"\n",
-    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
-    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
-    "            for indice, transacao in enumerate(m5_transacoes):\n",
-    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
-    "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_maiores_transacoes.txt\", \"./reports\")\n",
-    "            if m5_por_categoria is not None:\n",
-    "                relatorio_categorias = []\n",
-    "                for categoria in m5_por_categoria:\n",
-    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
-    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
-    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
-    "                    relatorio_categorias.append(relatorio_categoria)\n",
-    "                    print(relatorio_categoria)\n",
-    "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_maiores_por_categoria.txt\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"maiores\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"3\":\n",
     "            print(\"*** TOP 5 MENORES TRANSAÇÕES ***\")\n",
-    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            operacao = \"menores\"\n",
-    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
-    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
-    "            for indice, transacao in enumerate(m5_transacoes):\n",
-    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
-    "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_menores_transacoes.txt\", \"./reports\")\n",
-    "            if m5_por_categoria is not None:\n",
-    "                relatorio_categorias = []\n",
-    "                for categoria in m5_por_categoria:\n",
-    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
-    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
-    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
-    "                    relatorio_categorias.append(relatorio_categoria)\n",
-    "                    print(relatorio_categoria)\n",
-    "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_menores_por_categoria.txt\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"menores\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"4\":\n",
     "            print(\"*** TOP 5 TRANSAÇÕES MEDIANAS ***\")\n",
-    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            operacao = \"medianas\"\n",
-    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
-    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
-    "            for indice, transacao in enumerate(m5_transacoes):\n",
-    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
-    "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_transacoes_medianas.txt\", \"./reports\")\n",
-    "            if m5_por_categoria is not None:\n",
-    "                relatorio_categorias = []\n",
-    "                for categoria in m5_por_categoria:\n",
-    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
-    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
-    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
-    "                    relatorio_categorias.append(relatorio_categoria)\n",
-    "                    print(relatorio_categoria)\n",
-    "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_medianas_por_categoria.txt\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"medianas\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"5\":\n",
     "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
-    "            categoria = validar_opcao_sim_nao(\"Deseja calcular a média por categoria também?\")\n",
-    "            media_transacoes, medias_por_categoria = calcular_media(bd, categoria)\n",
-    "            relatorio = f\"A média das transações é R$ {media_transacoes:.2f}\"\n",
-    "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"media_transacoes.txt\", \"./reports\")\n",
-    "            if medias_por_categoria is not None:\n",
-    "                relatorio_categorias = []\n",
-    "                for categoria in medias_por_categoria:\n",
-    "                    relatorio_categoria = f\"A média da categoria '{categoria}' é R$ {medias_por_categoria.get(categoria):.2f}\"\n",
-    "                    relatorio_categorias.append(relatorio_categoria)\n",
-    "                    print(relatorio_categoria) \n",
-    "                salvar_relatorio(relatorio_categorias, \"media_por_categoria.txt\", \"./reports\")\n",
+    "            processar_relatorio(\"media\", \"./reports\")\n",
     "            break\n",
     "\n",
     "\n",
-    "\n",
     "def run():\n",
-    "    \"\"\"\n",
-    "    Esta é a função principal que vai rodar o programa\n",
-    "    \"\"\"  \n",
     "    usuario = input('Olá! Vamos iniciar seu atendimento. Por favor, insira seu nome:').title().strip()\n",
     "    conta = input('Insira o número da sua conta:').strip()\n",
     "\n",
@@ -474,7 +386,6 @@
     "\n",
     "    while True:\n",
     "\n",
-    "        # exibe a tela inicial\n",
     "        tela_inicial(usuario, conta)\n",
     "        opcao_escolhida = input().strip()\n",
     "        clear_output(wait = True)\n",
