fix: add bd como argumento das funções run() e visualizar_relatorios()

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -300,7 +300,7 @@
     "    print(f\"Relatório salvo em {diretorio}/{nome_relatorio}\")\n",
     "\n",
     "\n",
-    "def processar_relatorio(operacao , diretorio):\n",
+    "def processar_relatorio(operacao , diretorio, bd):\n",
     "    categoria = validar_opcao_sim_nao(f\"Deseja calcular {operacao.replace(\"e\", \"é\") if operacao == \"media\" else operacao} por categoria também?\")\n",
     "    if operacao == \"total\":\n",
     "        total_transacoes, por_categorias = calcular_total_transacoes(bd, categoria)\n",
@@ -319,7 +319,7 @@
     "        salvar_relatorio(relatorio_categorias, f\"{operacao}_por_categoria.txt\", diretorio)\n",
     "\n",
     "\n",
-    "def processar_relatorio_m5(operacao, diretorio):\n",
+    "def processar_relatorio_m5(operacao, diretorio, bd):\n",
     "    categoria = validar_opcao_sim_nao(f\"Deseja calcular top 5 {operacao} por categoria também?\")\n",
     "    m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
     "    relatorio = f\"As top 5 {operacao} são:\\n\"\n",
@@ -339,7 +339,7 @@
     "        salvar_relatorio(relatorio_categorias, f\"top5_{operacao}_por_categoria.txt\", diretorio)\n",
     "\n",
     "\n",
-    "def visualizar_relatorios():\n",
+    "def visualizar_relatorios(bd):\n",
     "    print(\"\\nEste menu permite visualizar os relatórios de sua conta pessoal.\")\n",
     "    print(\"\\nEscolha uma das opções abaixo:\")\n",
     "    print(\"1. Total das transações\")\n",
@@ -358,27 +358,27 @@
     "            break\n",
     "        elif opcao_escolhida == \"1\":\n",
     "            print(\"*** TOTAL DAS TRANSAÇÕES ***\")\n",
-    "            processar_relatorio(\"total\", \"./reports\")\n",
+    "            processar_relatorio(\"total\", \"./reports\", bd)\n",
     "            break\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** TOP 5 MAIORES TRANSAÇÕES ***\")\n",
-    "            processar_relatorio_m5(\"maiores\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"maiores\", \"./reports\", bd)\n",
     "            break\n",
     "        elif opcao_escolhida == \"3\":\n",
     "            print(\"*** TOP 5 MENORES TRANSAÇÕES ***\")\n",
-    "            processar_relatorio_m5(\"menores\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"menores\", \"./reports\", bd)\n",
     "            break\n",
     "        elif opcao_escolhida == \"4\":\n",
     "            print(\"*** TOP 5 TRANSAÇÕES MEDIANAS ***\")\n",
-    "            processar_relatorio_m5(\"medianas\", \"./reports\")\n",
+    "            processar_relatorio_m5(\"medianas\", \"./reports\", bd)\n",
     "            break\n",
     "        elif opcao_escolhida == \"5\":\n",
     "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
-    "            processar_relatorio(\"media\", \"./reports\")\n",
+    "            processar_relatorio(\"media\", \"./reports\", bd)\n",
     "            break\n",
     "\n",
     "\n",
-    "def run():\n",
+    "def run(bd):\n",
     "    usuario = input('Olá! Vamos iniciar seu atendimento. Por favor, insira seu nome:').title().strip()\n",
     "    conta = input('Insira o número da sua conta:').strip()\n",
     "\n",
@@ -402,7 +402,7 @@
     "                clear_output()\n",
     "                continue\n",
     "            while True:\n",
-    "                visualizar_relatorios()\n",
+    "                visualizar_relatorios(bd)\n",
     "                \n",
     "                visualizar_outros_relatorios = validar_opcao_sim_nao(\"Deseja visualizar outro relatório?\")\n",
     "                if visualizar_outros_relatorios == \"2\":\n",
@@ -521,7 +521,7 @@
     "    bd = load_bd()\n",
     "   \n",
     "    # inicia o programa\n",
-    "    run()"
+    "    run(bd)"
    ]
   }
  ],
