fix: ajusta opção 'sair' do menu de visualizar relatórios

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -355,7 +355,7 @@
     "    while True:\n",
     "        if opcao_escolhida == \"0\":\n",
     "            print(\"SAINDO...\")\n",
-    "            break\n",
+    "            return \"sair\"\n",
     "        elif opcao_escolhida == \"1\":\n",
     "            print(\"*** TOTAL DAS TRANSAÇÕES ***\")\n",
     "            processar_relatorio(\"total\", \"./reports\", bd)\n",
@@ -375,6 +375,9 @@
     "        elif opcao_escolhida == \"5\":\n",
     "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
     "            processar_relatorio(\"media\", \"./reports\", bd)\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Opção inválida, digite novamente.\")\n",
     "            break\n",
     "\n",
     "\n",
@@ -402,7 +405,8 @@
     "                clear_output()\n",
     "                continue\n",
     "            while True:\n",
-    "                visualizar_relatorios(bd)\n",
+    "                if visualizar_relatorios(bd) == \"sair\":\n",
+    "                    break\n",
     "                \n",
     "                visualizar_outros_relatorios = validar_opcao_sim_nao(\"Deseja visualizar outro relatório?\")\n",
     "                if visualizar_outros_relatorios == \"2\":\n",
